Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList ';'
    5       | Specifier ';'
    6       | Specifier FunDec CompSt
    7       | error

    8 ExtDecList: VarDec
    9           | VarDec ',' ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag '{' DefList '}'
   13                | STRUCT Tag

   14 OptTag: ID
   15       | %empty

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec '[' INT ']'

   19 FunDec: ID '(' VarList ')'
   20       | ID '(' ')'

   21 VarList: ParamDec ',' VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompSt: '{' DefList StmtList '}'

   25 StmtList: Stmt StmtList
   26         | %empty

   27 Stmt: Exp ';'
   28     | error ';'
   29     | CompSt
   30     | RETURN Exp ';'
   31     | IF '(' Exp ')' Stmt
   32     | IF '(' Exp ')' Stmt ELSE Stmt
   33     | WHILE '(' Exp ')' Stmt

   34 DefList: Def DefList
   35        | %empty

   36 Def: Specifier DecList ';'

   37 DecList: Dec
   38        | Dec ',' DecList

   39 Dec: VarDec
   40    | VarDec '=' Exp

   41 Exp: Exp '=' Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp '+' Exp
   46    | Exp '-' Exp
   47    | Exp '*' Exp
   48    | Exp '/' Exp
   49    | '(' Exp ')'
   50    | '-' Exp
   51    | '!' Exp
   52    | ID '(' Args ')'
   53    | ID '(' ')'
   54    | Exp '[' Exp ']'
   55    | Exp '.' ID
   56    | ID
   57    | INT
   58    | FLOAT

   59 Args: Exp ',' Args
   60     | Exp


Terminals, with rules where they appear

$end (0) 0
'!' (33) 51
'(' (40) 19 20 31 32 33 49 52 53
')' (41) 19 20 31 32 33 49 52 53
'*' (42) 47
'+' (43) 45
',' (44) 9 21 38 59
'-' (45) 46 50
'.' (46) 55
'/' (47) 48
';' (59) 4 5 27 28 30 36
'=' (61) 40 41
'[' (91) 18 54
']' (93) 18 54
'{' (123) 12 24
'}' (125) 12 24
error (256) 7 28
INT (258) 18 57
FLOAT (259) 58
ID (260) 14 16 17 19 20 52 53 55 56
TYPE (261) 10
IF (262) 31 32
WHILE (263) 33
RETURN (264) 30
STRUCT (265) 12 13
AND (266) 42
OR (267) 43
RELOP (268) 44
UMINUS (269)
LOWER_THAN_ELSE (270)
ELSE (271) 32


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7, on right: 2
ExtDecList (36)
    on left: 8 9, on right: 4 9
Specifier (37)
    on left: 10 11, on right: 4 5 6 23 36
StructSpecifier (38)
    on left: 12 13, on right: 11
OptTag (39)
    on left: 14 15, on right: 12
Tag (40)
    on left: 16, on right: 13
VarDec (41)
    on left: 17 18, on right: 8 9 18 23 39 40
FunDec (42)
    on left: 19 20, on right: 6
VarList (43)
    on left: 21 22, on right: 19 21
ParamDec (44)
    on left: 23, on right: 21 22
CompSt (45)
    on left: 24, on right: 6 29
StmtList (46)
    on left: 25 26, on right: 24 25
Stmt (47)
    on left: 27 28 29 30 31 32 33, on right: 25 31 32 33
DefList (48)
    on left: 34 35, on right: 12 24 34
Def (49)
    on left: 36, on right: 34
DecList (50)
    on left: 37 38, on right: 36 38
Dec (51)
    on left: 39 40, on right: 37 38
Exp (52)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58,
    on right: 27 30 31 32 33 40 41 42 43 44 45 46 47 48 49 50 51 54
    55 59 60
Args (53)
    on left: 59 60, on right: 52 59


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error .

    $default  reduce using rule 7 (ExtDef)


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag '{' DefList '}'
   13                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList ';'
    5       | Specifier . ';'
    6       | Specifier . FunDec CompSt

    ID   shift, and go to state 14
    ';'  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   14 OptTag: ID .
   16 Tag: ID .

    '{'       reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . '{' DefList '}'

    '{'  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

   17 VarDec: ID .
   19 FunDec: ID . '(' VarList ')'
   20       | ID . '(' ')'

    '('  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier ';' .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . ';'

    ';'  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . ',' ExtDecList
   18 VarDec: VarDec . '[' INT ']'

    '['  shift, and go to state 22
    ','  shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    '{'  shift, and go to state 24

    CompSt  go to state 25


State 19

   12 StructSpecifier: STRUCT OptTag '{' . DefList '}'

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 27
    Def              go to state 28


State 20

   19 FunDec: ID '(' . VarList ')'
   20       | ID '(' . ')'

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    ')'     shift, and go to state 29

    Specifier        go to state 30
    StructSpecifier  go to state 8
    VarList          go to state 31
    ParamDec         go to state 32


State 21

    4 ExtDef: Specifier ExtDecList ';' .

    $default  reduce using rule 4 (ExtDef)


State 22

   18 VarDec: VarDec '[' . INT ']'

    INT  shift, and go to state 33


State 23

    9 ExtDecList: VarDec ',' . ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 17


State 24

   24 CompSt: '{' . DefList StmtList '}'

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 36
    Def              go to state 28


State 25

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 26

   36 Def: Specifier . DecList ';'

    ID  shift, and go to state 34

    VarDec   go to state 37
    DecList  go to state 38
    Dec      go to state 39


State 27

   12 StructSpecifier: STRUCT OptTag '{' DefList . '}'

    '}'  shift, and go to state 40


State 28

   34 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 8
    DefList          go to state 41
    Def              go to state 28


State 29

   20 FunDec: ID '(' ')' .

    $default  reduce using rule 20 (FunDec)


State 30

   23 ParamDec: Specifier . VarDec

    ID  shift, and go to state 34

    VarDec  go to state 42


State 31

   19 FunDec: ID '(' VarList . ')'

    ')'  shift, and go to state 43


State 32

   21 VarList: ParamDec . ',' VarList
   22        | ParamDec .

    ','  shift, and go to state 44

    $default  reduce using rule 22 (VarList)


State 33

   18 VarDec: VarDec '[' INT . ']'

    ']'  shift, and go to state 45


State 34

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec ',' ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 36

   24 CompSt: '{' DefList . StmtList '}'

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    '-'     shift, and go to state 53
    '!'     shift, and go to state 54
    '('     shift, and go to state 55
    '{'     shift, and go to state 24

    '}'  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 57
    Stmt      go to state 58
    Exp       go to state 59


State 37

   18 VarDec: VarDec . '[' INT ']'
   39 Dec: VarDec .
   40    | VarDec . '=' Exp

    '='  shift, and go to state 60
    '['  shift, and go to state 22

    $default  reduce using rule 39 (Dec)


State 38

   36 Def: Specifier DecList . ';'

    ';'  shift, and go to state 61


State 39

   37 DecList: Dec .
   38        | Dec . ',' DecList

    ','  shift, and go to state 62

    $default  reduce using rule 37 (DecList)


State 40

   12 StructSpecifier: STRUCT OptTag '{' DefList '}' .

    $default  reduce using rule 12 (StructSpecifier)


State 41

   34 DefList: Def DefList .

    $default  reduce using rule 34 (DefList)


State 42

   18 VarDec: VarDec . '[' INT ']'
   23 ParamDec: Specifier VarDec .

    '['  shift, and go to state 22

    $default  reduce using rule 23 (ParamDec)


State 43

   19 FunDec: ID '(' VarList ')' .

    $default  reduce using rule 19 (FunDec)


State 44

   21 VarList: ParamDec ',' . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 30
    StructSpecifier  go to state 8
    VarList          go to state 63
    ParamDec         go to state 32


State 45

   18 VarDec: VarDec '[' INT ']' .

    $default  reduce using rule 18 (VarDec)


State 46

   28 Stmt: error . ';'

    ';'  shift, and go to state 64


State 47

   57 Exp: INT .

    $default  reduce using rule 57 (Exp)


State 48

   58 Exp: FLOAT .

    $default  reduce using rule 58 (Exp)


State 49

   52 Exp: ID . '(' Args ')'
   53    | ID . '(' ')'
   56    | ID .

    '('  shift, and go to state 65

    $default  reduce using rule 56 (Exp)


State 50

   31 Stmt: IF . '(' Exp ')' Stmt
   32     | IF . '(' Exp ')' Stmt ELSE Stmt

    '('  shift, and go to state 66


State 51

   33 Stmt: WHILE . '(' Exp ')' Stmt

    '('  shift, and go to state 67


State 52

   30 Stmt: RETURN . Exp ';'

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 68


State 53

   50 Exp: '-' . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 69


State 54

   51 Exp: '!' . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 70


State 55

   49 Exp: '(' . Exp ')'

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 71


State 56

   29 Stmt: CompSt .

    $default  reduce using rule 29 (Stmt)


State 57

   24 CompSt: '{' DefList StmtList . '}'

    '}'  shift, and go to state 72


State 58

   25 StmtList: Stmt . StmtList

    error   shift, and go to state 46
    INT     shift, and go to state 47
    FLOAT   shift, and go to state 48
    ID      shift, and go to state 49
    IF      shift, and go to state 50
    WHILE   shift, and go to state 51
    RETURN  shift, and go to state 52
    '-'     shift, and go to state 53
    '!'     shift, and go to state 54
    '('     shift, and go to state 55
    '{'     shift, and go to state 24

    '}'  reduce using rule 26 (StmtList)

    CompSt    go to state 56
    StmtList  go to state 73
    Stmt      go to state 58
    Exp       go to state 59


State 59

   27 Stmt: Exp . ';'
   41 Exp: Exp . '=' Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . '+' Exp
   46    | Exp . '-' Exp
   47    | Exp . '*' Exp
   48    | Exp . '/' Exp
   54    | Exp . '[' Exp ']'
   55    | Exp . '.' ID

    '='    shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    RELOP  shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '.'    shift, and go to state 82
    '['    shift, and go to state 83
    ';'    shift, and go to state 84


State 60

   40 Dec: VarDec '=' . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 85


State 61

   36 Def: Specifier DecList ';' .

    $default  reduce using rule 36 (Def)


State 62

   38 DecList: Dec ',' . DecList

    ID  shift, and go to state 34

    VarDec   go to state 37
    DecList  go to state 86
    Dec      go to state 39


State 63

   21 VarList: ParamDec ',' VarList .

    $default  reduce using rule 21 (VarList)


State 64

   28 Stmt: error ';' .

    $default  reduce using rule 28 (Stmt)


State 65

   52 Exp: ID '(' . Args ')'
   53    | ID '(' . ')'

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55
    ')'    shift, and go to state 87

    Exp   go to state 88
    Args  go to state 89


State 66

   31 Stmt: IF '(' . Exp ')' Stmt
   32     | IF '(' . Exp ')' Stmt ELSE Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 90


State 67

   33 Stmt: WHILE '(' . Exp ')' Stmt

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 91


State 68

   30 Stmt: RETURN Exp . ';'
   41 Exp: Exp . '=' Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . '+' Exp
   46    | Exp . '-' Exp
   47    | Exp . '*' Exp
   48    | Exp . '/' Exp
   54    | Exp . '[' Exp ']'
   55    | Exp . '.' ID

    '='    shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    RELOP  shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '.'    shift, and go to state 82
    '['    shift, and go to state 83
    ';'    shift, and go to state 92


State 69

   41 Exp: Exp . '=' Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . '+' Exp
   46    | Exp . '-' Exp
   47    | Exp . '*' Exp
   48    | Exp . '/' Exp
   50    | '-' Exp .
   54    | Exp . '[' Exp ']'
   55    | Exp . '.' ID

    '.'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 50 (Exp)


State 70

   41 Exp: Exp . '=' Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . '+' Exp
   46    | Exp . '-' Exp
   47    | Exp . '*' Exp
   48    | Exp . '/' Exp
   51    | '!' Exp .
   54    | Exp . '[' Exp ']'
   55    | Exp . '.' ID

    '.'  shift, and go to state 82
    '['  shift, and go to state 83

    $default  reduce using rule 51 (Exp)


State 71

   41 Exp: Exp . '=' Exp
   42    | Exp . AND Exp
   43    | Exp . OR Exp
   44    | Exp . RELOP Exp
   45    | Exp . '+' Exp
   46    | Exp . '-' Exp
   47    | Exp . '*' Exp
   48    | Exp . '/' Exp
   49    | '(' Exp . ')'
   54    | Exp . '[' Exp ']'
   55    | Exp . '.' ID

    '='    shift, and go to state 74
    AND    shift, and go to state 75
    OR     shift, and go to state 76
    RELOP  shift, and go to state 77
    '+'    shift, and go to state 78
    '-'    shift, and go to state 79
    '*'    shift, and go to state 80
    '/'    shift, and go to state 81
    '.'    shift, and go to state 82
    '['    shift, and go to state 83
    ')'    shift, and go to state 93


State 72

   24 CompSt: '{' DefList StmtList '}' .

    $default  reduce using rule 24 (CompSt)


State 73

   25 StmtList: Stmt StmtList .

    $default  reduce using rule 25 (StmtList)


State 74

   41 Exp: Exp '=' . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 94


State 75

   42 Exp: Exp AND . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 95


State 76

   43 Exp: Exp OR . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 96


State 77

   44 Exp: Exp RELOP . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 97


State 78

   45 Exp: Exp '+' . Exp

    INT    shift, and go to state 47
    FLOAT  shift, and go to state 48
    ID     shift, and go to state 49
    '-'    shift, and go to state 53
    '!'    shift, and go to state 54
    '('    shift, and go to state 55

    Exp  go to state 98


State 79

   46 Exp: Exp '-' . Exp
